# Rich_Bich_V2

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: company_index.csv  news_sources.yaml  smoke_training.yaml  training.yaml
notebooks/: richbich.ipynb
scripts/: download_all.py  ingest_news.py  launcher_gui.py  process_news.py  run_bot.py  start_bot.py  train.py
src/richbich/: __init__.py  config.py
src/richbich.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/richbich/bot/: __init__.py  telegram_bot.py
src/richbich/features/: __init__.py  feature_builder.py
src/richbich/modeling/: __init__.py  evaluation.py  trainer.py
src/richbich/nlp/: __init__.py  sentiment.py
src/richbich/pipelines/: __init__.py  training_pipeline.py
src/richbich/services/: company_lookup.py  company_registry.py  llm_client.py  summarizer.py
src/richbich/utils/: __init__.py  aliases.py  io.py  logging.py
